test/org/midica/testfiles/failing/zero-with-q.midica
INCLUDE inc/instruments.midica

0 - - q=5
